@@ -29,16 +29,16 @@ shift
 document=$1
 shift
 
-# FIXME: this is a hack to run uninstalled
-if test "x$0" = "x../../../gtkdoc-mkhtml" ; then
-      # uninstalled
-      gtkdocdir=`dirname $0`
-else
-      # installed
+# FIXME: this is a hack to detect uninstalled
+if test "x$0" = "x@prefix@/bin/gtkdoc-mkhtml" ; then
+      #echo "installed"
       # the first two are needed to resolve datadir
       prefix=@prefix@
       datarootdir=@datarootdir@
       gtkdocdir=@datadir@/gtk-doc/data
+else
+      #echo "uninstalled"
+      gtkdocdir=`dirname $0`
 fi
 
 if head -n 1 $document | grep "<?xml" > /dev/null; then
