@@ -5,7 +5,9 @@ SUBDIRS = gobject bugs annotations .
 if BUILD_TESTS
 
 TESTS = gobject.sh bugs.sh annotations.sh
-TESTS_ENVIRONMENT = PATH=$(top_builddir):$(srcdir):$(PATH)
+TESTS_ENVIRONMENT = \
+	PATH=$(abs_top_builddir):$(srcdir):$(PATH) \
+	PERL5LIB=$(abs_top_builddir):$(PERL5LIB)
 
 endif
 
